# k8s-exprets

./: .gitignore  README.md  _requirements.txt  pyproject.toml  requirements.txt
src/: main.py
src/common/: agent.py  logger.py  tools.py
train/: k8s-expert.ipynb  kubectl.ipynb  ops_agent.ipynb
